--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,40 +2,50 @@
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge" >
-    <meta name="viewport" content="width=device-width, initial-scale=1" >
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.2/css/bootstrap.min.css}"/>
     <title>viaJava</title>
 </head>
 <body>
-  <div>
+<div class="container">
     <h1>viaJava</h1>
 
-    <hr />
+    <hr/>
 
-    <table>
-      <thead>
-      <tr>
-        <th>Ações</th>
-        <th>Id</th>
-        <th>Descição</th>
-        <th>Estado</th>
-        <th>Criado</th>
-        <th>Editado</th>
-      </tr>
-      </thead>
-      <tbody>
-        <tr th:each="item : ${items}">
-          <td th:text="${item.id}" ></td>
-          <td th:text="${item.description}" ></td>
-          <td>
-              <span th:if="${item.isComplete} == true" th:text="Completo"/>
-              <span th:unless="${item.isComplete} == true" th:text=""/>
-          </td>
-          <td th:text="${item.createdAt}" ></td>
-          <td th:text="${item.updatedAt}" ></td>
+    <table class="table table-bordered table-striped">
+        <thead>
+        <tr>
+            <th>Ações</th>
+            <th>Id</th>
+            <th>Descição</th>
+            <th>Estado</th>
+            <th>Criado</th>
+            <th>Editado</th>
         </tr>
-      </tbody>
+        </thead>
+        <tbody>
+        <tr th:each="item : ${items}">
+
+            # Non Break Space
+            <td>&nbsp;</td>
+            <td th:text="${item.id}"></td>
+            <td th:text="${item.description}"></td>
+            <td>
+                <span th:if="${item.isComplete} == true" th:text="Completo"/>
+                <span th:unless="${item.isComplete} == true" th:text=""/>
+            </td>
+            <td th:text="${item.createdAt}"></td>
+            <td th:text="${item.updatedAt}"></td>
+        </tr>
+        </tbody>
     </table>
-  </div>
+
+    <p>
+        <a class="btn btn-outline-success" href="/new-todo">
+        <i class="bi bi-plus-square-fill"></i> Criar Card </a>
+    </p>
+</div>
+<script th:src="@{/webjars/bootstrap/5.2.2/js/bootstrap.min.js}"></script>
 </body>
 </html>
