add add form POST

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,7 +42,7 @@
     </table>
 
     <p>
-        <a class="btn btn-outline-success" href="/new-todo">
+        <a class="btn btn-outline-success" href="/create-todo">
         <i class="bi bi-plus-square-fill"></i> Criar Card </a>
     </p>
 </div>
