--- a/src/main/resources/templates/new-item.html
+++ b/src/main/resources/templates/new-item.html
@@ -1,27 +1,24 @@
-<!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE-edge">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.2/css/bootstrap.min.css}"/>
-  <title>viaJava</title>
+  <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.2/css/bootstrap.min.css}" />
 </head>
 <body>
 <div class="container">
-
   <div class="row mt-5">
     <div class="col-2">
       <p><a class="btn btn-outline-success" href="/">
-        <i class="bi bi-arrow-left-square-fill"></i> Voltar </a>
+        <i class="bi bi-arrow-left-square-fill"></i> Back</a>
       </p>
     </div>
     <div class="col-6">
-      <h2> Adicionar Card </h2>
-      <form action="#" th:action="@{/todo}" th:object="${ItemTodo}" method="POST">
+      <h2>Add a new Todo Item</h2>
+      <form action="#" th:action="@{/todo}" th:object="${itemTodo}" method="POST">
         <div class="form-group">
-          <label for="description"> Descrição </label>
-
+          <label for="description">Description</label>
           <input class="form-control"
                  type="text"
                  th:field="*{description}"
@@ -29,11 +26,8 @@
                  placeholder="Description"
           >
 
-          <button
-                  type="submit"
-                  class="btn btn-outline-success">
-            <i class="bi bi-plus-square-fill"></i>
-            Adicionar
+          <button type="submit" class="btn btn-outline-success">
+            <i class="bi bi-plus-square-fill"></i> Add Todo
           </button>
 
         </div>
@@ -41,7 +35,6 @@
     </div>
   </div>
 
-  </div>
 </div>
 <script th:src="@{/webjars/bootstrap/5.2.2/js/bootstrap.min.js}"></script>
 </body>
