fix: login issue

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -102,7 +102,7 @@
         <div class="col-6">
             <h2> Olá, </h2>
             <h2> Seja bem vindo de volta. </h2>
-            <form action="#" th:action="@{/user}" th:object="${user}" method="GET">
+            <form action="#" th:action="@{/login}" th:object="${user}" method="GET">
                 <div class="form-group">
                     <label for="name">Nome</label>
                     <input class="form-control"
