--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -95,9 +95,9 @@
 
     <div class="row mt-5">
         <div class="col-2">
-            <p><a class="btn btn-outline-success" href="/">
-                <i class="bi bi-arrow-left-square-fill"></i> Back</a>
-            </p>
+<!--            <p><a class="btn btn-outline-success" href="/">-->
+<!--                <i class="bi bi-arrow-left-square-fill"></i> Back</a>-->
+<!--            </p>-->
         </div>
         <div class="col-6">
             <h2> Olá, </h2>
@@ -114,7 +114,7 @@
 
                     <label for="password">Senha</label>
                     <input class="form-control"
-                           type="text"
+                           type="password"
                            th:field="*{password}"
                            id="password"
                            placeholder="Senha"
