--- a/src/main/resources/templates/register-user.html
+++ b/src/main/resources/templates/register-user.html
@@ -113,7 +113,7 @@
 
           <label for="password">Senha</label>
           <input class="form-control"
-                 type="text"
+                 type="password"
                  th:field="*{password}"
                  id="password"
                  placeholder="Senha"
