--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -100,13 +100,15 @@
                     <div class="row justify-content-center">
                         <div class="col-12">
                             <div class="table-responsive">
-                                <table class="table table-dark table-bordered mb-0">
+                                <table class="table table-dark mb-0">
                                     <thead>
                                     <tr>
                                         <th scope="col" >Ações</th>
                                         <th scope="col" >Id</th>
                                         <th scope="col" >Descição</th>
                                         <th scope="col" >Estado</th>
+                                        <th scope="col" >Partida</th>
+                                        <th scope="col" >Chegada</th>
                                         <th scope="col" >Criado</th>
                                         <th scope="col" >Editado</th>
                                     </tr>
@@ -144,6 +146,8 @@
                                                 </svg>
                                             </span>
                                         </td>
+                                        <td th:text="${#temporals.format(item.departure, 'dd/MM/yyyy HH:mm:ss')}"></td>
+                                        <td th:text="${#temporals.format(item.arrival, 'dd/MM/yyyy HH:mm:ss')}"></td>
                                         <td th:text="${#dates.format(item.createdAt, 'dd/MM/yyyy HH:mm:ss')}"></td>
                                         <td th:text="${#dates.format(item.updatedAt, 'dd/MM/yyyy HH:mm:ss')}"></td>
                                     </tr>
