fix isComplete button

--- a/src/main/resources/templates/edit-item.html
+++ b/src/main/resources/templates/edit-item.html
@@ -141,7 +141,7 @@
                    th:field="*{isComplete}"
                    th:checked="${isComplete} == true">
             <label class="form-check-label" for="inputIsComplete">
-              Completed?
+              Completo?
             </label>
           </div>
 
