--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -105,19 +105,21 @@
             <form action="#" th:action="@{/login}" th:object="${user}" method="GET">
                 <div class="form-group">
                     <label for="name">Nome</label>
-                    <input class="form-control"
+                    <input class="form-control required"
                            type="text"
                            th:field="*{name}"
                            id="name"
                            placeholder="Nome"
+                           required
                     >
 
                     <label for="password">Senha</label>
-                    <input class="form-control"
+                    <input class="form-control required"
                            type="password"
                            th:field="*{password}"
                            id="password"
                            placeholder="Senha"
+                           required
                     >
 
                     <button type="submit" class="btn btn-outline-success">
